--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,31 @@
     <style>
       * {
         font-family: "Open Sans", sans-serif;
+        box-sizing: border-box;
+        padding: 0;
         margin: 0;
+      }
+
+      /* width */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+
+      /* Track */
+      ::-webkit-scrollbar-track {
+        /* box-shadow: inset 0 0 5px grey; */
+        border-radius: 10px;
+      }
+
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+      }
+
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: rgba(0, 0, 0, 0.8);
       }
     </style>
     <title>React App</title>
