--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <style>
       * {
         font-family: "Open Sans", sans-serif;
@@ -41,7 +45,7 @@
         background: rgba(0, 0, 0, 0.8);
       }
     </style>
-    <title>React App</title>
+    <title>Shopo | find your wearables here</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
